--- a/package.json
+++ b/package.json
@@ -1,48 +1,73 @@
 {
   "name": "mcp-manager",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "index.js",
+  "description": "MCP Manager is a protocol and toolset for sharing Model Context Protocol (MCP) settings between different MCP clients.",
+  "version": "0.0.0",
+  "author": "Jarad DeLorenzo",
   "bin": {
     "mcpm": "./bin/run.js"
   },
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "build": "tsc",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "prepack": "npm run build",
-    "postpack": "rm -f oclif.manifest.json"
-  },
-  "keywords": [
-    "cli",
-    "mcp",
-    "model-context-protocol"
-  ],
-  "author": "",
-  "license": "ISC",
-  "description": "CLI tool to manage MCP servers",
+  "bugs": "https://github.com/delorenj/mcp-manager/issues",
   "dependencies": {
-    "@oclif/core": "^3.0.0",
-    "@oclif/plugin-help": "^5.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@oclif/core": "^4",
+    "@oclif/plugin-help": "^6",
+    "@oclif/plugin-plugins": "^5"
   },
   "devDependencies": {
-    "@oclif/test": "^3.1.3",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^18.19.3",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.0.0"
+    "@oclif/prettier-config": "^0.2.1",
+    "@oclif/test": "^4",
+    "@types/chai": "^4",
+    "@types/mocha": "^10",
+    "@types/node": "^18",
+    "chai": "^4",
+    "eslint": "^8",
+    "eslint-config-oclif": "^5",
+    "eslint-config-oclif-typescript": "^3",
+    "eslint-config-prettier": "^9",
+    "mocha": "^10",
+    "oclif": "^4",
+    "shx": "^0.3.3",
+    "ts-node": "^10",
+    "typescript": "^5"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "files": [
+    "/bin",
+    "/dist",
+    "/oclif.manifest.json"
+  ],
+  "homepage": "https://github.com/delorenj/mcp-manager",
+  "keywords": [
+    "oclif"
+  ],
+  "license": "MIT",
+  "main": "dist/index.js",
+  "type": "module",
   "oclif": {
     "bin": "mcpm",
     "dirname": "mcpm",
     "commands": "./dist/commands",
     "plugins": [
-      "@oclif/plugin-help"
+      "@oclif/plugin-help",
+      "@oclif/plugin-plugins"
     ],
-    "topicSeparator": " "
-  }
+    "topicSeparator": " ",
+    "topics": {
+      "hello": {
+        "description": "Say hello to the world and others"
+      }
+    }
+  },
+  "repository": "delorenj/mcp-manager",
+  "scripts": {
+    "build": "shx rm -rf dist && tsc -b",
+    "lint": "eslint . --ext .ts",
+    "postpack": "shx rm -f oclif.manifest.json",
+    "posttest": "npm run lint",
+    "prepack": "oclif manifest && oclif readme",
+    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "version": "oclif readme && git add README.md"
+  },
+  "types": "dist/index.d.ts"
 }
