--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,15 @@
 {
-  "include": ["src/**/*"],
   "compilerOptions": {
-    "outDir": "./dist",
-     "module": "commonjs", // Changed from "nodenext"
-    "target": "es2022",
-     "moduleResolution": "node", // Changed from "NodeNext"
-    "strict": true,
-    "esModuleInterop": true,
     "declaration": true,
-    "importHelpers": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "types": ["jest"]  // Added this line
+    "module": "Node16",
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true,
+    "target": "es2022",
+    "moduleResolution": "node16"
   },
-    "exclude": ["node_modules", "**/*.test.ts"] // you might want to exclude the test files from compilation.
+  "include": ["./src/**/*"],
+  "ts-node": {
+    "esm": true
+  }
 }
